Tue Sep 01 08:49:59 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am,src/Makefile.am,src/aven.cc,src/message.c: Fix up the
	  handling of bundled epsg and esri files to work.

Tue Sep 01 08:32:34 GMT 2015  Olly Betts <olly@survex.com>

	* tests/cmd_export_bad.out,tests/cmd_export_bad.svx: Add more new files
	  missed from earlier commit.

Tue Sep 01 08:28:41 GMT 2015  Olly Betts <olly@survex.com>

	* tests/cmd_equate_bad.out,tests/cmd_equate_bad.svx: Add new files
	  missed from earlier commit.

Sun Aug 30 01:32:13 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c: Fix potential crash in *ref.

Sat Aug 29 05:41:47 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Sat Aug 29 04:09:43 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/cmd_dummy.svx: Check syntax on *ref.

Sat Aug 29 00:53:16 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml,src/commands.c,tests/cmd_dummy.svx,
	  tests/doubleinc.out: Add *ref command to allow specifying an external
	  reference.

Fri Aug 28 23:15:13 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am,buildmacosx.sh,src/,survex.iss.in: Bundle proj's EPSG and
	  ESRI code lists in the installers for MS Windows and OS X so that
	  things like "*cs EPSG:29903" work.  Reported by Graham Mullan.

Fri Aug 28 21:47:15 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Fix the orientation of the starting end of tubes.

Fri Aug 28 21:21:28 GMT 2015  Olly Betts <olly@survex.com>

	* lib/po-to-msg.pl: Only check C format strings in messages with the
	  c-format flag.

Fri Aug 28 21:11:24 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Aug 28 21:03:26 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Show "busy" mouse cursor while processing survey
	  data.

Fri Aug 28 19:09:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc,src/cavernlog.h,src/mainfrm.cc: Use idle events
	  rather than wxYield to give much smoother update of the cavern log