@@ -1,3 +1,9 @@
+Sun Sep 06 00:03:38 GMT 2015  Olly Betts <olly@survex.com>
+
+	* buildmacosx.sh: Building libav with --disable-decoders
+	  --disable-demuxers causes a link failure when linking aven, so drop
+	  those options for now.
+
 Tue Sep 01 08:49:59 GMT 2015  Olly Betts <olly@survex.com>
 
 	* Makefile.am,src/Makefile.am,src/aven.cc,src/message.c: Fix up the
